--- a/indexer/requirements.txt
+++ b/indexer/requirements.txt
@@ -10,7 +10,7 @@ pydantic
 pyyaml
 redis
 ring
-tvm_valuetypes
+git+https://github.com/toncenter/tvm_valuetypes.git
 celery[redis]
 psycopg2-binary
 sqlalchemy[asyncio]
