--- a/indexer/Dockerfile
+++ b/indexer/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:20.04 as tonlib-builder
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
-RUN apt install -y build-essential cmake clang openssl libssl-dev zlib1g-dev gperf wget git curl libreadline-dev ccache libmicrohttpd-dev
+RUN apt install -y build-essential cmake clang openssl libssl-dev zlib1g-dev gperf wget git curl libreadline-dev ccache libmicrohttpd-dev pkg-config
 
 # build tonlib
 WORKDIR /
