--- a/indexer/requirements.txt
+++ b/indexer/requirements.txt
@@ -1,16 +1,15 @@
-alembic==1.13.0
+alembic==1.13.1
 fastapi==0.104.1
 gunicorn==21.2.0
-uvicorn==0.24.0.post1
+uvicorn==0.27.0
 loguru==0.7.2
-pydantic==2.5.2
+pydantic==2.5.3
 pydantic-settings==2.1.0
 tvm-valuetypes==0.0.10
 psycopg2-binary==2.9.9
-SQLAlchemy==1.4.46
+SQLAlchemy==2.0.25
 asyncpg==0.29.0
-SQLAlchemy-Utils==0.41.1
 requests==2.31.0
-pytonlib==0.0.51
+pytonlib==0.0.53
 uvloop==0.19.0
 httpx==0.25.2
