--- a/docker-compose.api.yaml
+++ b/docker-compose.api.yaml
@@ -9,6 +9,7 @@ x-indexer-environment: &indexer-environment
   TON_INDEXER_API_ROOT_PATH:
   TON_INDEXER_API_TITLE:
   TON_INDEXER_TON_HTTP_API_ENDPOINT:
+  TON_INDEXER_CACHE_ENDPOINT: redis://index-cache:6379/
 
 services:
   index-api:
@@ -36,6 +37,17 @@ services:
       toncenter-global:
         aliases:
           - ${TONCENTER_ENV:?}-indexer-cpp-api
+  index-cache:
+    image: redis:latest
+    command: redis-server --maxmemory ${CACHE_MAX_MEMORY:-8gb} --maxmemory-policy allkeys-lru
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - "node.labels.${TONCENTER_ENV:?}.indexer-cpp.api==true"
+    networks:
+      internal:
 
 networks:
   internal:
